--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -135,14 +135,14 @@ otp_length = 6
 # Number of seconds before the email OTP expires (defaults to 1 hour).
 otp_expiry = 3600
 
-# Use a production-ready SMTP server
-# [auth.email.smtp]
-# host = "smtp.sendgrid.net"
-# port = 587
-# user = "apikey"
-# pass = "env(SENDGRID_API_KEY)"
-# admin_email = "admin@email.com"
-# sender_name = "Admin"
+# Use Resend as SMTP server for email confirmation
+[auth.email.smtp]
+host = "smtp.resend.com"
+port = 465
+user = "resend"
+pass = "env(RESEND_API_KEY)"
+admin_email = "env(ADMIN_EMAIL)"
+sender_name = "env(SENDER_NAME)"
 
 # Uncomment to customize email template
 # [auth.email.template.invite]
