📧 Add specific Resend configuration guide
- Configure for verified domain msgs.myai.ad
- Set sender email to NoReply@msgs.myai.ad
- Update supabase config with correct email settings
- Provide step-by-step SMTP configuration for Supabase
- Include testing and troubleshooting steps

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -141,8 +141,8 @@ host = "smtp.resend.com"
 port = 465
 user = "resend"
 pass = "env(RESEND_API_KEY)"
-admin_email = "env(ADMIN_EMAIL)"
-sender_name = "env(SENDER_NAME)"
+admin_email = "NoReply@msgs.myai.ad"
+sender_name = "MyAi"
 
 # Uncomment to customize email template
 # [auth.email.template.invite]
