Rebrand application from MyAi to MindShifting
- Updated all user-facing text from 'MyAi' to 'MindShifting'
- Corrected repository URLs to https://github.com/MyAiAd/MindShift.git
- Updated package.json and package-lock.json with new name
- Preserved functional elements: email addresses, domains, auth systems
- Updated documentation, setup scripts, and service worker
- Maintained 'Built with ❤️ by MyAi' attribution linking to MyAi.ad

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myai",
+  "name": "mindshifting",
   "version": "0.1.0",
   "private": true,
   "description": "A revolutionary AI-powered platform for mindset transformation and personal growth",
@@ -10,11 +10,11 @@
     "coaching",
     "transformation"
   ],
-  "author": "MyAiAd",
+  "author": "MindShifting",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/MyAi/MyAi.git"
+    "url": "https://github.com/MyAiAd/MindShift.git"
   },
   "scripts": {
     "dev": "next dev",
