--- a/package.json
+++ b/package.json
@@ -48,10 +48,11 @@
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
-    "next": "14.0.3",
+    "next": "^14.2.30",
     "openai": "^5.9.0",
     "postcss": "^8.4.32",
     "qrcode": "^1.5.4",
+    "qrcode-generator": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
