Restore email configuration back to Sage@MyAi.ad
REVERTED EMAIL CHANGES:
✅ supabase/config.toml: NoReply@msgs.myai.ad → Sage@MyAi.ad
✅ PRODUCTION_SETUP.md: Contact@MyAi.ad → Sage@MyAi.ad
✅ TEST_RESEND_SETUP.md: Contact@MyAi.ad → Sage@MyAi.ad (multiple instances)

EMAIL NOW CORRECTLY SET TO: Sage@MyAi.ad
- Admin email configuration restored
- Documentation updated
- Test examples updated

All email references now point back to Sage@MyAi.ad as requested.

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -141,7 +141,7 @@ host = "smtp.resend.com"
 port = 465
 user = "resend"
 pass = "env(RESEND_API_KEY)"
-admin_email = "NoReply@msgs.myai.ad"
+admin_email = "Sage@MyAi.ad"
 sender_name = "MyAi"
 
 # Uncomment to customize email template
