--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-slot": "^1.2.4",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/auth-ui-react": "^0.4.6",
@@ -42,8 +43,8 @@
     "@types/speakeasy": "^2.0.10",
     "@types/web-push": "^3.6.4",
     "autoprefixer": "^10.4.16",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "csv-parse": "^5.5.2",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.16",
@@ -59,8 +60,9 @@
     "recharts": "^2.15.4",
     "speakeasy": "^2.0.0",
     "stripe": "^18.3.0",
-    "tailwind-merge": "^2.0.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.3.6",
+    "tailwindcss-animate": "^1.0.7",
     "web-push": "^3.6.7",
     "zod": "^3.22.4"
   },
