--- a/package.json
+++ b/package.json
@@ -52,9 +52,11 @@
     "clsx": "^2.1.1",
     "csv-parse": "^5.5.2",
     "date-fns": "^2.30.0",
+    "focus-trap-react": "^11.0.4",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
     "next": "^14.2.30",
+    "next-pwa": "^5.6.0",
     "openai": "^5.9.0",
     "postcss": "^8.4.32",
     "qrcode": "^1.5.4",
