--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "recharts": "^2.15.4",
+    "resend": "^6.6.0",
     "speakeasy": "^2.0.0",
     "stripe": "^18.3.0",
     "tailwind-merge": "^2.6.0",
